# Rust-MUD

./: .env  .gitignore  Cargo.toml  README.md  \
bevy/: Cargo.toml
client/: Cargo.toml
client/src/: app.rs  lib.rs  main.rs  resources.rs
client/src/plugins/: camera.rs  keyboard.rs  mod.rs  player.rs
client/src/systems/: camera.rs  events.rs  init.rs  input.rs  mod.rs  player.rs  spell.rs  sync.rs  tick.rs
db/: Cargo.toml  readme.md
db/migrations/2022-11-19-202555_create_accounts/: up.sql
db/migrations/2022-11-29-041423_player/: up.sql
db/src/: lib.rs  models.rs  schema.rs
db/src/data_access/: accounts.rs  mod.rs  players.rs
db/src/models/: player.rs
game_server/: Cargo.toml
game_server/resource/json/: monsters.json
game_server/src/: commands.rs  main.rs  profile.rs  shot.rs
game_server/src/game/: game.rs  mod.rs
game_server/src/server/: auth_service.rs  fake_server.rs  mod.rs
game_server/src/ui/: frame.rs  main.rs  mod.rs  ui.rs  (+1 more)
resource/: map_monster.json
resource/json/: gears.json  monsters.json  monsters_location.json
server/: Cargo.toml
server/src/: main.rs  resources.rs
server/src/plugins/: mod.rs  spell.rs
server/src/systems/: enemy.rs  events.rs  init.rs  mod.rs  spell.rs  tick.rs
shared/: Cargo.toml
shared/src/: protocol.rs
src/: commands.rs  frame.rs  invaders.rs  lib.rs  main.rs  monsters.rs  player.rs  position.rs  profile.rs  render.rs  section.rs  shot.rs
src/game/: game.rs
src/monsters/: mod.rs  monster.rs  monsters.rs
src/server/: fake_server.rs
src/ui/: frame.rs  main.rs  mod.rs  section.rs  ui.rs
(+38 files in other folders)
