[package]
name = "invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rusty_audio = "1.2.1"
rusty_time = "0.11.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8.5"
