[package]
name = "naia-bevy-server-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
naia-bevy-demo-shared = { path = "../shared" }
naia-bevy-server = { version = "0.14.0"}
bevy_app = { version = "0.9", default-features=false }
bevy_core = { version = "0.9", default-features=false }
bevy_ecs = { version = "0.9", default-features=false }
bevy_log = { version = "0.9", default-features=false }
